src/objects/Local_Comment_Code__c.object
<CustomObject>
    <description>Localized versions of the Global Comment Codes.</description>
    <fields>
        <fullName>Criticality__c</fullName>
        <description>This indicates if a Comment Code falls under Critical or Non-Critical</description>
        <inlineHelpText>If Checked indicates a critical type else non-critical</inlineHelpText>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Translated_Path__c</fullName>
        <formula>IF(NOT(ISBLANK(Level_1__c)), Level_1__c &amp;&apos;/&apos; &amp; 
IF(NOT(ISBLANK(Level_2__c)), Level_2__c &amp; &apos;/&apos; &amp; 
IF(NOT(ISBLANK(Level_3__c)),Level_3__c, &quot; &quot;), &quot; &quot;),&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Translated Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCC_Level_1__c</fullName>
        <formula>TEXT( Global_Comment_Code__r.Level_1__c )</formula>
        <label>GCC Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCC_Level_2__c</fullName>
        <formula>TEXT(Global_Comment_Code__r.Level_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCC Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCC_Level_3__c</fullName>
        <formula>Global_Comment_Code__r.Level_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCC Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_LCID__c</fullName>
        <description>This is the ID that will be populated by the C3DB system</description>
        <externalId>true</externalId>
        <label>GCR_LCID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global_Comment_Code_Group__c</fullName>
        <formula>Global_Comment_Code__r.Comment_Group__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Comment Code Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Comment_Code_Language__c</fullName>
        <formula>Global_Comment_Code__r.Comment_Group__r.Language__c</formula>
        <label>Global Comment Code Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Comment_Code__c</fullName>
        <description>Master Detail with Global Comment Code</description>
        <label>Global Comment Code</label>
        <referenceTo>Global_Comment_Code__c</referenceTo>
        <relationshipLabel>Local Comment Code</relationshipLabel>
        <relationshipName>Local_Comment_Code</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Global Comment Code needs to be marked Inactive</description>
        <inlineHelpText>If checked indicates that this Global Comment Code is inactive</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <description>This is the first level indicating the type of the comment code</description>
        <externalId>true</externalId>
        <label>Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <description>This is the next level up once we know the type of Comment Code</description>
        <externalId>true</externalId>
        <label>Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <label>Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synonyms__c</fullName>
        <description>This will be the list of synonyms that an agent may use to find a specific comment code</description>
        <inlineHelpText>Please enter any synonyms that may come up in the search for this Comment Code</inlineHelpText>
        <label>Synonyms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Translated_Language__c</fullName>
        <label>Translated Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Germany - Prof</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Portuguese-BR</fullName>
                </value>
                <value>
                    <fullName>Slovac Republic</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish-EU</fullName>
                </value>
                <value>
                    <fullName>Spanish-LA</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translated_Path__c</fullName>
        <label>Translated_Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Local Comment Code</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Global_Comment_Code__c</columns>
        <columns>Full_Translated_Path__c</columns>
        <columns>Synonyms__c</columns>
        <columns>Description__c</columns>
        <columns>Translated_Language__c</columns>
        <columns>Inactive__c</columns>
        <columns>Criticality__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCC_Level_2__c</field>
            <operation>contains</operation>
            <value>label</value>
        </filters>
        <filters>
            <field>Translated_Language__c</field>
            <operation>equals</operation>
            <value>English-US</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>myview</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Full_Translated_Path__c</columns>
        <columns>Synonyms__c</columns>
        <columns>Description__c</columns>
        <columns>Global_Comment_Code__c</columns>
        <columns>Translated_Language__c</columns>
        <columns>Inactive__c</columns>
        <columns>Criticality__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Translated_Language__c</field>
            <operation>contains</operation>
            <value>English-US</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Full_Translated_Path__c</field>
            <operation>contains</operation>
            <value>adverse</value>
        </filters>
        <label>myview</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LCC-{0000}</displayFormat>
        <label>Local Comment Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Comment Code</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>